minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__absolute_catalog_schema_reference_1.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Absolute:
    - - Name: s
      - start: 1
        end: 2
- start: 0
  end: 2
