minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__catalog_object_parent_reference_4.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
schema:
  - Absolute:
      - - Name: a
        - start: 1
          end: 2
      - - Name: b
        - start: 3
          end: 4
  - start: 0
    end: 4
objects: []
