minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__predefined_schema_reference_1.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Current
- start: 0
  end: 1
