minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__relative_catalog_schema_reference_2.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Relative:
    - - Parent
      - start: 0
        end: 2
    - - Parent
      - start: 3
        end: 5
    - - Name: d
      - start: 6
        end: 7
    - - Name: s
      - start: 8
        end: 9
- start: 0
  end: 9
