minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__relative_directory_path_2.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- - Parent
  - start: 0
    end: 2
